--- a/netlify/functions/quotes/Cargo.toml
+++ b/netlify/functions/quotes/Cargo.toml
@@ -12,10 +12,9 @@ lambda_runtime = "0.3.0"
 log = "0.4.14"
 simple_logger = "2.0.0"
 tokio = "1.6.1"
-native-tls = "0.2.10"
-# openssl = "0.10.40"
-# postgres-openssl = "0.5.0"
-postgres-native-tls = "0.5.0"
+openssl = "0.10.40"
+postgres-openssl = "0.5.0"
+rust_decimal = { version = "1.25.0", features = ["db-tokio-postgres"] }
 serde = "1.0.140"
 serde_json = "1.0.82"
 tokio-postgres = "0.7.6"
