--- a/netlify/functions/quotes/Cargo.toml
+++ b/netlify/functions/quotes/Cargo.toml
@@ -14,10 +14,9 @@ simple_logger = "2.0.0"
 tokio = "1.6.1"
 openssl = "0.10.40"
 postgres-openssl = "0.5.0"
-# postgres-querybuilder = "0.3.0"
 rust_decimal = { version = "1.25.0", features = ["db-tokio-postgres"] }
-scooby = "0.4.0"
 serde = { version = "1.0.140", features = ["derive"] }
 serde_json = "1.0.82"
 serde_with = "2.0.0"
+string-builder = "0.2.0"
 tokio-postgres = "0.7.6"
